<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_toolbar"
            app:popupTheme="@style/AppTheme.NoActionBar">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/title_main"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff" />

                <TextView
                    android:id="@+id/descScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:text="@string/desc_main"
                    android:textColor="#ffffff"
                    app:lineHeight="18dp" />

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleChooseDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingTop="@dimen/fab_margin"
                android:paddingRight="@dimen/fab_margin"
                android:paddingBottom="0dp"
                android:text="@string/title_chooseday" />

            <TextView
                android:id="@+id/descChooseDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fab_margin"
                android:paddingTop="0dp"
                android:paddingRight="@dimen/fab_margin"
                android:text="@string/desc_chooseday" />
        </LinearLayout>

        <CalendarView
            android:id="@+id/cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/buttonChooseDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gradient"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:text="@string/button_chooseday" />

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>